Update from curriculum repo

--- a/module-4/lesson-3/FD_Module_4_Lesson_3.ipynb
+++ b/module-4/lesson-3/FD_Module_4_Lesson_3.ipynb
@@ -259,6 +259,9 @@
     "    # to load data from local file in case of any disruptions\n",
     "    callsNflx = pd.read_csv(\"nflx_calls.csv\")\n",
     "\n",
+    "callsNflx[\"Open Interest\"] = (\n",
+    "    callsNflx[\"Open Interest\"].str.replace(\"-\", \"0\").astype(float)\n",
+    ")\n",
     "list(callsNflx.columns)"
    ]
   },
@@ -488,6 +491,9 @@
     "    if \"-\" == putsNflx[\"Volume\"][index]:\n",
     "        putsNflx.loc[index, \"Volume\"] = 0\n",
     "\n",
+    "putsNflx[\"Open Interest\"] = (\n",
+    "    putsNflx[\"Open Interest\"].str.replace(\"-\", \"0\").astype(float)\n",
+    ")\n",
     "numPutStrikes = putsNflx[\"Strike\"].count()\n",
     "numPutStrikes"
    ]
